An invisible handle in Version control

--- a/About.html
+++ b/About.html
@@ -6,10 +6,10 @@
 
 </head>
 <body style="font-family: tahoma">
-	    <div style="background-color: palegreen;height:200px;width: 100%px;margin: 0px"color: white;">>
+	    <div style="background-color: palegreen;height:200px;width: 100%px;margin: 0px"color: white;">
 	    	<a href="Home.html"><h2>Home</h2></a>
 	    	<h2>About </h2>
-	    		<a href="Contact.html"><h2>Contact US</h2><a/>
+	    		<a href="Contact.html"><h2>Contact US</h2></a>
                 <a href="Blog.html"><h2> Blog</h2></a>
 	    	<button>Click me</button>
 	    	     
